# pentagi

./: .gitignore  CLAUDE.md  Dockerfile
.specify/: feature.json
YAML/: ingress.yaml  neo4j.yaml  pentagi.yaml  postgres.yaml  secret.yaml
pentagi_client_pkg/: .env.example  .gitignore  pyproject.toml
pentagi_client_pkg/pentagi_client/: __init__.py  cli.py  client.py  config.py  exceptions.py  models.py  prompt.txt  streaming.py
pentagi_client_pkg/pentagi_samples/: flow_9.json  flow_9_agentlogs.json  flow_9_assistantlogs.json  flow_9_containers.json  flow_9_graph.json  flow_9_messages.json  flow_9_screenshots.json  flow_9_searchlogs.json  flow_9_subtasks_all.json  flow_9_tasks.json  flow_9_usage.json  flow_9_vecstorelogs.json  flows.json  manifest.json  usage_period_month.json  usage_period_quarter.json  usage_period_week.json  usage_system.json
pentagi_client_pkg/prompt/: prompt_core_mof.txt  prompt_partner_mof.txt
pentagi_client_pkg/tests/: test_cli.py  test_client.py  test_config.py
scripts/: entrypoint.sh
specs/001-pentagi-python-client/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-pentagi-python-client/checklists/: requirements.md
specs/001-pentagi-python-client/contracts/: cli-schema.md  library-api.md
swagger/: swagger.json
